[package]
name = "libwebp"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]

[dependencies]
cfg-if = "0.1.6"
libc = "0.2.43"
libwebp-sys = { path = "../libwebp-sys" }

[dev-dependencies]
png = "0.13.1"

[features]
default = []
"0.5" = ["libwebp-sys/0.5"]
"0.6" = ["libwebp-sys/0.6", "0.5"]
